--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
   <string name="description_title">Description</string>
   <string name="artworks_title">Artworks</string>
   <string name="trailer_title">Trailer</string>
+  <string name="appwidget_text">EXAMPLE</string>
+  <string name="add_widget">Add widget</string>
 </resources>
