--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
   <string name="widget_click_text">Click</string>
   <string name="widget_favourite_movies_title">Favourite Movies</string>
   <string name="widget_test_item_text">Ant Man</string>
+  <string name="artwork_content_description">This is %s poster</string>
 </resources>
