--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
   <string name="trailer_title">Trailer</string>
   <string name="appwidget_text">EXAMPLE</string>
   <string name="add_widget">Add widget</string>
-  <string name="widget_click_text">Click</string>
+  <string name="widget_click_text">Click or Expand Me </string>
   <string name="widget_favourite_movies_title">Favourite Movies</string>
   <string name="widget_test_item_text">Ant Man</string>
   <string name="artwork_content_description">This is %s poster</string>
